--- a/switch tables and config toml files/config.toml
+++ b/switch tables and config toml files/config.toml
@@ -1,7 +1,7 @@
 [main]
 file_path = "./game/default.xex"
 out_directory_path = "./out"
-switch_table_file_path = "./switch/other.toml"
+switch_table_file_path = "./switch/switch_tables.toml"
 
 skip_lr = false
 skip_msr = false
@@ -21,7 +21,7 @@ savevmx_14_address = 0x82FF1540
 restvmx_64_address = 0x82FF186C
 savevmx_64_address = 0x82FF15D4
 
-longjmp_address = 0x833B7FA4
+longjmp_address = 0x833B7F94
 setjmp_address = 0x82CC42C8
 
 functions = [
